modified:   src/main/java/com/spring/constant/DBQuery.java 	modified:   src/main/java/com/spring/controller/AdminController.java 	modified:   src/main/webapp/WEB-INF/views/cancelappointment.jsp 	modified:   src/main/webapp/WEB-INF/views/login.jsp 	modified:   src/main/webapp/WEB-INF/views/signup.jsp 	modified:   src/main/webapp/WEB-INF/views/viewappointment.jsp 	modified:   src/main/webapp/WEB-INF/views/viewprofile.jsp

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.spring</groupId>
 	<artifactId>Spring-MVC-LoginForm</artifactId>
-	<name>Spring-MVC-LoginForm</name>
+	<name>Spring-MVC-LoginForm-1.0.0-BUILD-SNAPSHOT</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
